# 2026-aps-test-data

./: README.md  experimental-data.json  revealData.json
arborizer-simple/: arborizer_simple_model_flat.omex
epithelial-cell/: lumen-sodium-steps.omex
experimental-data/: README.md  add-noise.py  generate-thumbnail.py  pyproject.toml
experimental-data/hypercapnea/: v_RVLM-with-noise.csv
experimental-data/vagal-stimulation/: heart-period-15Hz-stimulus-with-noise.csv  pressure-15Hz-stimulus-with-noise.csv
primary/: baseline-simulation.omex  eat-drink-simulation.omex
rcl-simple/: RCL_Circuit.omex
reveal/: eating-and-drinking-simulation.omex  hypercapnea-simulation.omex  vagal-stimulation-simulation.omex
