[project]
name = "experimental-data-tools"
version = "0.1.0"
description = "Utility scripts for experimental data processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

 [tool.hatch.build.targets.wheel]
packages = ["add-noise"]